--- a/lowquality.html
+++ b/lowquality.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <link rel="shortcut icon" href="/img/favicon.png" />
+    <link rel="shortcut icon" href="image/favicon.png" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="photo" />
-    <link rel="stylesheet" type="text/css" href="/css/faceki-sign-up-successful.css" />
+    <link rel="stylesheet" type="text/css" href="css/faceki-sign-up-denied.css" />
     <style>
       @import url("https://fonts.googleapis.com/css?family=Roboto:300,400|Lato:400");
 
@@ -178,30 +178,28 @@
     <meta name="author" content="AnimaApp.com - Design to code, Automated." />
   </head>
   <body style="margin: 0; background: rgba(255, 255, 255, 1)">
-    <input type="hidden" id="anPageName" name="page" value="faceki-sign-up-successful" />
-    <div class="faceki-sign-up-successful anima-screen">
-      <img class="bg-C61RwL" src="/img/bg-1@1x.png" />
+    <input type="hidden" id="anPageName" name="page" value="faceki-sign-up-denied" />
+    <div class="faceki-sign-up-denied anima-screen">
+      <img class="bg-C61RwL" src="image/bg-1@1x.png" />
       <div class="group-83-C61RwL">
-        <img class="path-103-jQ4qbJ" src="/img/path-103-1@1x.png" />
-        <img class="path-104-jQ4qbJ" src="/img/path-104-1@1x.png" />
-        <img class="path-105-jQ4qbJ" src="/img/path-105-1@1x.png" />
-        <img class="path-106-jQ4qbJ" src="/img/path-106-1@1x.png" />
-        <img class="path-107-jQ4qbJ" src="/img/path-107-1@1x.png" />
+        <img class="path-103-jQ4qbJ" src="image/path-103-1@1x.png" />
+        <img class="path-104-jQ4qbJ" src="image/path-104-1@1x.png" />
+        <img class="path-105-jQ4qbJ" src="image/path-105-1@1x.png" />
+        <img class="path-106-jQ4qbJ" src="image/path-106-1@1x.png" />
+        <img class="path-107-jQ4qbJ" src="image/path-107-1@1x.png" />
         <div class="frame-jQ4qbJ">
-          <div class="group-50-xbgdn2"><img class="path-108-a4BkZO" src="/img/path-108-1@1x.png" /></div>
-          <div class="group-51-xbgdn2"><img class="path-109-oPVaBz" src="/img/path-109-1@1x.png" /></div>
-          <div class="group-52-xbgdn2"><img class="path-110-jCJyme" src="/img/path-110-1@1x.png" /></div>
-          <div class="group-53-xbgdn2"><img class="path-111-G3xBub" src="/img/path-111-1@1x.png" /></div>
+          <div class="group-50-xbgdn2"><img class="path-108-a4BkZO" src="image/path-108-1@1x.png" /></div>
+          <div class="group-51-xbgdn2"><img class="path-109-oPVaBz" src="image/path-109-1@1x.png" /></div>
+          <div class="group-52-xbgdn2"><img class="path-110-jCJyme" src="image/path-110-1@1x.png" /></div>
+          <div class="group-53-xbgdn2"><img class="path-111-G3xBub" src="image/path-111-1@1x.png" /></div>
         </div>
-        <img class="path-112-jQ4qbJ" src="/img/path-112-1@1x.png" />
+        <img class="path-112-jQ4qbJ" src="image/path-112-1@1x.png" />
       </div>
-      <a href="/" id="home_url">
-        ><img class="group-85-C61RwL anima-smart-layers-pointers" src="/img/group-85-1@1x.png"
-      /></a>
+      <a href="/" id="home_url"><img class="group-85-C61RwL anima-smart-layers-pointers" src="image/group-85-1@1x.png" /></a>
+      <img class="tick-C61RwL" src="image/tick-3@1x.png" />
       <div class="balance-C61RwL">
-        <div class="total-balance-76THyG">Your account is <br />successfully created</div>
+        <div class="total-balance-76THyG roboto-normal-santas-gray-26px">Please try again with good quality photo</div>
       </div>
-      <img class="tick-C61RwL" src="/img/tick-1@1x.png" />
     </div>
   </body>
   <script type="text/javascript">
