--- a/faceki-sign-in-complete.html
+++ b/faceki-sign-in-complete.html
@@ -203,6 +203,7 @@
     </div>
   </body>
   <script type="text/javascript">
+    const BASE_URL = "https://app.faceki.com/";
     const pathUrl = window.location.pathname;
     const baseUrl = window.location.origin+"/";
     const pathUrlArray1 = pathUrl.split("/");
@@ -212,7 +213,34 @@
     pathUrlArray.pop();
     const newPath=pathUrlArray.join("/");
     document.getElementById('home_url').setAttribute("href", baseUrl+'/'+newPath); 
-    const name_field = localStorage.getItem("firstname")+" "+localStorage.getItem("lastname")
-    document.getElementById('name_field').innerHTML =name_field;
+
+
+    const urlParams = new URLSearchParams(window.location.search);
+    const id = urlParams.get('id');
+
+    //alert(ids);
+
+    var url = BASE_URL+"getSingleUser"
+    var data = JSON.stringify({
+            id: id
+    });
+
+    fetch(url, {
+            method: "POST",
+            headers: {
+            'Accept': 'application/json',
+            'Content-Type': 'application/json',
+        },
+        body: data
+        }).then(response=>{
+           return response.json()
+    })
+    .then(function(res){
+        var user_name=res.user.user.name;
+        document.getElementById('name_field').innerHTML = user_name;
+    }).catch(e=>{
+    console.log(e)
+    })
+
   </script>
 </html>
