--- a/faceki-sign-in.html
+++ b/faceki-sign-in.html
@@ -184,48 +184,77 @@
       }
     </style>
     <meta name="author" content="AnimaApp.com - Design to code, Automated." />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet">
+    <style type="text/css">
+     .facescane_my video{
+       -webkit-transform: scaleX(-1);
+       transform: scaleX(-1);
+     }
+    </style>
   </head>
   <body style="margin: 0; background: rgba(255, 255, 255, 1)">
   <input type="hidden" id="token" value="{{token}}" />
   <input type="hidden" id="type" value="login" />
-    <input type="hidden" id="anPageName" name="page" value="faceki-sign-in" />
-    <div class="faceki-sign-in anima-screen">
-      <img class="bg-C61RwL" src="image/bg-1@1x.png" />
-      <div class="group-83-C61RwL">
-        <img class="path-103-jQ4qbJ" src="image/path-103-1@1x.png" />
-        <img class="path-104-jQ4qbJ" src="image/path-104-1@1x.png" />
-        <img class="path-105-jQ4qbJ" src="image/path-105-1@1x.png" />
-        <img class="path-106-jQ4qbJ" src="image/path-106-1@1x.png" />
-        <img class="path-107-jQ4qbJ" src="image/path-107-1@1x.png" />
-        <div class="frame-jQ4qbJ">
-          <div class="group-50-xbgdn2"><img class="path-108-a4BkZO" src="image/path-108-1@1x.png" /></div>
-          <div class="group-51-xbgdn2"><img class="path-109-oPVaBz" src="image/path-109-1@1x.png" /></div>
-          <div class="group-52-xbgdn2"><img class="path-110-jCJyme" src="image/path-110-1@1x.png" /></div>
-          <div class="group-53-xbgdn2"><img class="path-111-G3xBub" src="image/path-111-1@1x.png" /></div>
+  <input type="hidden" id="anPageName" name="page" value="faceki-sign-in" />
+    
+
+    <section class="faceki-section" id="selfiepage" style="display:block !important;">
+      <div class="camera-holder">
+        <div class="faceki-card faceki-card-light mx-auto position-relative mx-auto">
+          <div class="camera-content-top">
+            <h2 id="noFace" class="faceki-card__title mb-0">Take a Selfie</h2>
+            <h3 class="faceki-card__title mb-0 d-none d-md-block">Fit your face in the middle</h3>
         </div>
-        <img class="path-112-jQ4qbJ" src="image/path-112-1@1x.png" />
-      </div>
-      <div class="balance-C61RwL">
-        <div class="total-balance-76THyG roboto-normal-santas-gray-25px">Sign in with a selfie</div>
-      </div>
-        <div class="wrapper" id="cam_container">
-            <video autoplay id="video" width="380px" height="380px"></video>
+        
+
+        <div id="desktop-selfie" class="d-none d-md-block">
+         <img src="assets/img/shape/selfie-desktop.png" alt="">
         </div>
-
-
-        <!--<div id="camera" class="camera"></div>-->
-        <img class="camera" id="Faceframe" src="image/group-110-1@1x.png" />
-        <div class="camera" id="loader" style="display: none">
-            <img class="loader" src="image/loader.gif">
-            <div class="roboto-normal-santas-gray-18px" style="margin-top: 20px" align="center">  PLEASE WAIT</div>
-        </div>
-
-
-      <div class="balance-VMr6Om">
-        <div class="total-balance-a3vkDe roboto-normal-santas-gray-18px">Fit your face in the middle</div>
-          <h4 id="message-1"></h4>
+  
+       <div id="mobile-selfie">
+        <img class="slfie-screen d-md-none" src="assets/img/shape/selfie.png" alt="">
+       </div>
+  
+        <button class="camera-btn selfie-btn" id="capture" onclick="callApi('front')">
+          <svg xmlns="http://www.w3.org/2000/svg" width="70" height="71" viewBox="0 0 70 71">
+              <g id="Group_276" data-name="Group 276" transform="translate(1.032 1.4)">
+                <g id="Group_126" data-name="Group 126" transform="translate(0)">
+                  <ellipse id="Oval_2" data-name="Oval 2" cx="34" cy="34.5" rx="34" ry="34.5" transform="translate(-0.032 -0.4)" fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="2"/>
+                  <circle id="Oval_2-2" data-name="Oval 2" cx="26" cy="26" r="26" transform="translate(7.968 8.6)" fill="#fff"/>
+                </g>
+                <g id="Group_129" data-name="Group 129" transform="translate(22.77 22.428)">
+                  <g id="Group_128" data-name="Group 128">
+                    <path id="Path_134" data-name="Path 134" d="M703.9,322.184l.947-1.891a4.743,4.743,0,0,1,.4-.617,2.143,2.143,0,0,1,.724-.65.987.987,0,0,1,.438-.107h6.528a.988.988,0,0,1,.44.107,2.145,2.145,0,0,1,.724.65,4.862,4.862,0,0,1,.412.632l.937,1.876h1.84a3.808,3.808,0,0,1,3.808,3.808v9.792a3.808,3.808,0,0,1-3.808,3.808H702.062a3.808,3.808,0,0,1-3.808-3.808v-9.792a3.808,3.808,0,0,1,3.808-3.808Zm-1.3,5.44a1.088,1.088,0,1,0-1.088-1.088,1.088,1.088,0,0,0,1.088,1.088Zm7.072,7.616a4.9,4.9,0,1,0-4.9-4.9,4.9,4.9,0,0,0,4.9,4.9Z" transform="translate(-698.254 -318.92)" fill="#464c5f"/>
+                    <path id="Path_135" data-name="Path 135" d="M709.062,333.536a3.808,3.808,0,1,0-3.808-3.808,3.808,3.808,0,0,0,3.808,3.808Z" transform="translate(-697.638 -318.304)" fill="#464c5f" fill-rule="evenodd"/>
+                  </g>
+                </g>
+              </g>
+            </svg>
+      </button>
+    <div class="selfie-content-bottom">
+      <h3 class="faceki-card__title mb-0 d-md-none">Fit your face in the middle</h3>
+      <h4 id="message-1"></h4>
+    </div>
+      <div class="facescane_my">
+          <img class="pattern d-md-none" src="assets/img/shape/pattern.png" alt="">
+          <video autoplay="" class="video-selfie" id="video2" muted="" playsinline=""></video>
       </div>
-      <a id="capture" onclick=callApi()><img class="group-109-C61RwL anima-smart-layers-pointers" src="image/group-109-1@1x.png"/></a>
+
+      </div>
+   
+     <canvas id="canvas2" style="display: none;"></canvas>
+    </section> 
+
+    <div class="camera" id="loader" style="display: none; margin-left: 42% !important;margin-top: 10% !important;">
+            <img class="loader" src="image/loader.gif" >
+            <div class="roboto-normal-santas-gray-18px" style="margin-top: 20px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PLEASE WAIT</div>
+            <h4 id="message-1"></h4>
     </div>
 
   </body>
