--- a/faceki-sign-in-list.html
+++ b/faceki-sign-in-list.html
@@ -1,221 +1,68 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <link rel="shortcut icon" href="image/favicon.png" />
-    <meta name="og:type" content="website" />
-    <meta name="twitter:card" content="photo" />
-    <link rel="stylesheet" type="text/css" href="css/faceki-sign-in-complete.css" />
-    <style>
-      @import url("https://fonts.googleapis.com/css?family=Roboto:300,400|Lato:400");
+<html lang="en">
+<head>
+  <title>FACEKI</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=no" />
+  <meta name="author" content="goodSide" />
+  <meta name="description" content="goodSide" />
+  <meta name="keywords" content="goodSide" />
+  <!--link font css-->
+  <link rel="stylesheet" type="text/css" href="request_assets/fonts/fonts.css" />
+  <!--link bootstarp css-->
+  <link rel="stylesheet" type="text/css" href="request_assets/css/bootstrap.min.css" />
+  <!--link style css-->
+  <link rel="stylesheet" type="text/css" href="request_assets/css/style.css" />
+</head>
 
-      .anima-component-wrapper a,
-      .anima-screen a {
-        text-decoration: none;
-        display: contents;
-      }
+<body>
 
-      .anima-full-width-a {
-        width: 100%;
-      }
+  <img id="page_loader" style="display: none; margin-left: 42%;margin-top: 10%;" src="assets/img/icon/loader.gif">
 
-      .anima-full-height-a {
-        height: 100%;
-      }
-
-      .anima-screen textarea:focus,
-      .anima-screen input:focus {
-        outline: none;
-      }
-
-      .anima-screen *,
-      .anima-component-wrapper * {
-        box-sizing: border-box;
-      }
-
-      .anima-screen div {
-        -webkit-text-size-adjust: none;
-      }
-
-      .anima-container-center-vertical,
-      .anima-container-center-horizontal {
-        pointer-events: none;
-        display: flex;
-        flex-direction: row;
-        padding: 0;
-        margin: 0;
-      }
-
-      .anima-container-center-vertical {
-        align-items: center;
-        height: 100%;
-      }
-
-      .anima-container-center-horizontal {
-        justify-content: center;
-        width: 100%;
-      }
-
-      .anima-container-center-vertical > *,
-      .anima-container-center-horizontal > * {
-        pointer-events: auto;
-        flex-shrink: 0;
-      }
-
-      .anima-component-wrapper,
-      .anima-screen {
-        overflow-wrap: break-word;
-        word-wrap: break-word;
-        word-break: break-all;
-        word-break: break-word;
-      }
-
-      .anima-auto-animated div {
-        opacity: 0;
-        position: absolute;
-        --anima-z-index: -1;
-      }
-
-      .anima-auto-animated .anima-container-center-vertical,
-      .anima-auto-animated .anima-container-center-horizontal {
-        opacity: 1;
-      }
-
-      .anima-overlay {
-        position: absolute;
-        opacity: 0;
-        display: none;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        position: fixed;
-      }
-
-      .anima-animate-appear {
-        opacity: 0;
-        display: block;
-        animation: anima-reveal 0.3s ease-in-out 1 normal forwards;
-      }
-
-      .anima-animate-disappear {
-        opacity: 1;
-        display: block;
-        animation: anima-reveal 0.3s ease-in-out 1 reverse forwards;
-      }
-
-      .anima-animate-nodelay {
-        animation-delay: 0s;
-      }
-
-      @keyframes anima-reveal {
-        from {
-          opacity: 0;
-        }
-        to {
-          opacity: 1;
-        }
-      }
-      .align-self-flex-start {
-        align-self: flex-start;
-      }
-      .align-self-flex-end {
-        align-self: flex-end;
-      }
-      .align-self-flex-center {
-        align-self: center;
-      }
-      .anima-valign-text-middle {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-      }
-      .anima-valign-text-bottom {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-      }
-      .anima- input:focus {
-        outline: none;
-      }
-      .anima-component-wrapper,
-      .anima-component-wrapper * {
-        pointer-events: none;
-      }
-
-      .anima-component-wrapper a *,
-      .anima-component-wrapper a,
-      .anima-component-wrapper input,
-      .anima-component-wrapper video,
-      .anima-component-wrapper iframe,
-      .anima-listeners-active,
-      .anima-listeners-active * {
-        pointer-events: auto;
-      }
-
-      .anima-hidden,
-      .anima-hidden * {
-        visibility: hidden;
-        pointer-events: none;
-      }
-
-      .anima-smart-layers-pointers,
-      .anima-smart-layers-pointers * {
-        pointer-events: auto;
-        visibility: visible;
-      }
-
-      .anima-component-wrapper.anima-not-ready,
-      .anima-component-wrapper.anima-not-ready * {
-        visibility: hidden !important;
-      }
-
-      .anima-listeners-active-click,
-      .anima-listeners-active-click * {
-        cursor: pointer;
-      }
-
-      table {
-        border-collapse: collapse;
-        width: 100%;
-      }
-
-      th, td {
-        padding: 8px;
-        text-align: left;
-        border-bottom: 1px solid #ddd;
-      }
-    </style>
-    <meta name="author" content="AnimaApp.com - Design to code, Automated." />
-  </head>
-  <body style="margin: 0; background: rgba(255, 255, 255, 1)">
-    <input type="hidden" id="anPageName" name="page" value="faceki-sign-in-complete" />
-    <div class="faceki-sign-in-complete anima-screen">
-      <img class="bg-C61RwL" src="image/bg-1@1x.png" />
-      <div class="group-83-C61RwL">
-        <img class="path-103-jQ4qbJ" src="image/path-103-1@1x.png" />
-        <img class="path-104-jQ4qbJ" src="image/path-104-1@1x.png" />
-        <img class="path-105-jQ4qbJ" src="image/path-105-1@1x.png" />
-        <img class="path-106-jQ4qbJ" src="image/path-106-1@1x.png" />
-        <img class="path-107-jQ4qbJ" src="image/path-107-1@1x.png" />
-        <div class="frame-jQ4qbJ">
-          <div class="group-50-xbgdn2"><img class="path-108-a4BkZO" src="image/path-108-1@1x.png" /></div>
-          <div class="group-51-xbgdn2"><img class="path-109-oPVaBz" src="image/path-109-1@1x.png" /></div>
-          <div class="group-52-xbgdn2"><img class="path-110-jCJyme" src="image/path-110-1@1x.png" /></div>
-          <div class="group-53-xbgdn2"><img class="path-111-G3xBub" src="image/path-111-1@1x.png" /></div>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header" style="border-bottom: 0; padding-bottom: 5px;">
+          <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
         </div>
-        <img class="path-112-jQ4qbJ" src="image/path-112-1@1x.png" />
-      </div>
-      <a href="/" id="home_url"><img class="group-85-C61RwL anima-smart-layers-pointers" src="image/group-85-1@1x.png"/></a>
-      <div class="balance-C61RwL" style="left: calc(25.00%) !important;">
-        <div class="total-balance-76THyG">
-          <p style="margin-left: 60%; font-weight: bold; color: #383242;">Choose an account</p>
-          <table id="user_table"></table>
+        <div class="modal-body">
+          <div class="su_signup_item">
+            <div class="su_signup_heading">
+              <h1>Choose an account</h1>
+              <p>You have multi account registered with us.<br>Choose the one you want to sign-in with</p>
+            </div>
+            <div class="su_persoanl_details">
+              <form class="su_form_details" action="">
+                <ul class="su_choose_acount" id="user_table">
+                  <li>
+                    <a href="#">Name of user <span>myemail@gmail.com</span></a>
+                  </li>
+                  <li>
+                    <a href="#">Name of user <span>myemail@gmail.com</span></a>
+                  </li>
+                </ul>
+              </form>
+            </div>
+            <div class="su_button">
+              <a id="home_url" class="su_primary_button" target="_blank">None of them is mine</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+
+  <!--JS file-->
+  <script src="js/jquery-3.3.1.slim.min.js"></script>
+  <script src="request_assets/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript">
+    // $(window).on('load', function() {
+    //     $('#exampleModal').modal('show');
+    // });
+
+    $('#page_loader').show();
+
     const BASE_URL = "https://app.faceki.com/";
     const pathUrl = window.location.pathname;
     const baseUrl = window.location.origin+"/";
@@ -253,16 +100,19 @@
         users.forEach(user=>{
         //console.log('response_data2',user.name);
         if(user.name!=''){
-         users_html+=`<tr>
-                <td><a href="`+baseUrl+'/'+newPath+'/faceki-sign-in-complete.html?id='+user.face_id+`" style="color:#585166!important;">`+user.name+`</a></td>
-                <td><a href="`+baseUrl+'/'+newPath+'/faceki-sign-in-complete.html?id='+user.face_id+`" style="color:#585166!important;">(`+user.name+`)</a></td>
-              </tr>`;
+         users_html+=`<li>
+                    <a href="`+baseUrl+'/'+newPath+'/faceki-sign-in-complete.html?id='+user.face_id+`">`+user.name+`<span>`+user.email+`</span></a>
+                  </li>`;
          }
         });
         document.getElementById('user_table').innerHTML = users_html;
+        $('#page_loader').hide();
+        $('#exampleModal').modal({backdrop: 'static', keyboard: false}); 
+        $('#exampleModal').modal('show');
     }).catch(e=>{
     console.log(e)
     })
 
   </script>
+</body>
 </html>
