--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="col-sm-12 col-xs-12">
           <div class="user-signup">
              <p>Don't have a FACEKI account?</p>
-             <a href="javascript:void(0);" onclick="getToken('signup');">
+             <a href="javascript:void(0);" onclick="getToken('pre_signup');">
               <img src="https://app.faceki.com/img/group-88@1x.png" alt="logo">
              </a>
           </div>
